// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icons component \`Check\` should match snapshot 1`] = `
<div>
  <svg
    height="1em"
    viewBox="0 0 352.62 352.62"
    width="1em"
  >
    <path
      d="M337.222 22.952c-15.912-8.568-33.66 7.956-44.064 17.748-23.867 23.256-44.063 50.184-66.708 74.664-25.092 26.928-48.348 53.856-74.052 80.173-14.688 14.688-30.6 30.6-40.392 48.96-22.032-21.421-41.004-44.677-65.484-63.648C28.774 167.385-.602 157.593.01 190.029c1.224 42.229 38.556 87.517 66.096 116.28 11.628 12.24 26.928 25.092 44.676 25.704 21.42 1.224 43.452-24.48 56.304-38.556 22.645-24.48 41.005-52.021 61.812-77.112 26.928-33.048 54.468-65.485 80.784-99.145 16.524-20.808 68.544-72.217 27.54-94.248zM26.937 187.581c-.612 0-1.224 0-2.448.611-2.448-.611-4.284-1.224-6.732-2.448 1.836-1.224 4.896-.612 9.18 1.837z"
    />
  </svg>
</div>
`;

exports[`Icons component \`Document\` should match snapshot 1`] = `
<div>
  <svg
    height="1em"
    viewBox="0 0 477.867 477.867"
    width="1em"
  >
    <path
      d="M421.649 90.317L336.316 4.983a16.871 16.871 0 00-5.564-3.703A17.232 17.232 0 00324.267 0H102.4C74.123 0 51.2 22.923 51.2 51.2v375.467c0 28.277 22.923 51.2 51.2 51.2h273.067c28.277 0 51.2-22.923 51.2-51.2V102.4a17.276 17.276 0 00-5.018-12.083zm-80.316-32.051l27.068 27.068h-27.068V58.266zm51.2 368.401c0 9.426-7.641 17.067-17.067 17.067H102.4c-9.426 0-17.067-7.641-17.067-17.067V51.2c0-9.426 7.641-17.067 17.067-17.067h204.8V102.4c0 9.426 7.641 17.067 17.067 17.067h68.267v307.2z"
    />
  </svg>
</div>
`;

exports[`Icons component \`Search\` should match snapshot 1`] = `
<div>
  <svg
    height="1em"
    viewBox="0 0 512.005 512.005"
    width="1em"
  >
    <path
      d="M505.749 475.587l-145.6-145.6c28.203-34.837 45.184-79.104 45.184-127.317C405.333 90.926 314.41.003 202.666.003S0 90.925 0 202.669s90.923 202.667 202.667 202.667c48.213 0 92.48-16.981 127.317-45.184l145.6 145.6c4.16 4.16 9.621 6.251 15.083 6.251s10.923-2.091 15.083-6.251c8.341-8.341 8.341-21.824-.001-30.165zM202.667 362.669c-88.235 0-160-71.765-160-160s71.765-160 160-160 160 71.765 160 160-71.766 160-160 160z"
    />
  </svg>
</div>
`;

exports[`Icons component \`Spinner\` should match snapshot 1`] = `
.c0 {
  -webkit-animation: 1s cilQsd infinite linear;
  animation: 1s cilQsd infinite linear;
}

<div>
  <svg
    class="c0"
    height="1em"
    viewBox="0 0 48 48"
    width="1em"
  >
    <circle
      cx="24"
      cy="4"
      fill="#000"
      r="4"
    />
    <circle
      cx="12.19"
      cy="7.86"
      fill="#000"
      r="3.7"
    />
    <circle
      cx="5.02"
      cy="17.68"
      fill="#000"
      r="3.4"
    />
    <circle
      cx="5.02"
      cy="30.32"
      fill="#000"
      r="3.1"
    />
    <circle
      cx="12.19"
      cy="40.14"
      fill="#000"
      r="2.8"
    />
    <circle
      cx="24"
      cy="44"
      fill="#000"
      r="2.5"
    />
    <circle
      cx="35.81"
      cy="40.14"
      fill="#000"
      r="2.2"
    />
    <circle
      cx="42.98"
      cy="30.32"
      fill="#000"
      r="1.9"
    />
    <circle
      cx="42.98"
      cy="17.68"
      fill="#000"
      r="1.6"
    />
    <circle
      cx="35.81"
      cy="7.86"
      fill="#000"
      r="1.3"
    />
  </svg>
</div>
`;
